--- a/src/index.css
+++ b/src/index.css
@@ -16,18 +16,21 @@
 .container{
   width:500px;
   height:700px;
-  border-radius: 50px;
+  border-radius: 20px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 10px;
+  transition: all 0.3s;
 }
-.search-box{
+.search-container{
   position:absolute;
   top:15%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.search-box{
   padding: 10px;
   border-color: #222222;
   border-radius: 10px;
@@ -69,18 +72,20 @@ input:focus{
 }
 .temp-info{
   position: absolute;
-  top:50%;
-  left: 50%;
-  transform: translate(-70%, 10%);
+  top:100%;
+  transform: translate(-50%, -50%);
 }
 .temp-info p{
   color:white;
   font-size: 50px;
   font-weight: bold;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+  width:60px;
 }
+
 .celsius-icon{
   margin:0px;
+  padding:0px;
   position: absolute;
   top:50%;
   left: 50%;
